k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chinmayee-deployment-postgres
  namespace: chinmayee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chinmayee-postgres
  template:
    metadata:
      labels:
        app: chinmayee-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: chinmayee-postgres-pvc
