k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chinmayee-deployment-worker
  namespace: chinmayee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chinmayee-worker
  template:
    metadata:
      labels:
        app: chinmayee-worker
    spec:
      containers:
        - name: worker
          image: chinmayee606/worker:latest
