k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chinmayee-svc-result
  namespace: chinmayee
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: chinmayee-result
